--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 .swiper-container {
   overflow: hidden; /* Prevent vertical scroll */
 }
+.ec-avatar-placeholder {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3474D4;
+  color: #fff;
+  font-weight: bold;
+  font-size: 18px;
+  border-radius: 50%;
+  text-transform: uppercase;
+}
